[package]
name = "pneumatic"
version = "0.1.0"
authors = ["Paavo Huhtala <paavo.huhtala@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"
ring = "0.16.15"

[dependencies.tokio]
version = "0.2.22"
features = ["tcp", "rt-threaded", "fs", "macros", "sync"]
